// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Typography As specific element 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  font-family: Roboto;
  line-height: 2.5rem;
  font-size: 2rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 2.25rem;
  font-size: 1.75rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 2rem;
  font-size: 1.375rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 1.75rem;
  font-size: 1.25rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-5 {
  font-family: Roboto;
  line-height: 1.5rem;
  font-size: 1.125rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 700;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-7 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-8 {
  font-family: Roboto;
  line-height: 1.125rem;
  font-size: 0.625rem;
  font-weight: 700;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-9 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-10 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-11 {
  font-family: Roboto;
  line-height: 1.125rem;
  font-size: 0.625rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-12 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-13 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-14 {
  font-family: Roboto;
  line-height: 1.125rem;
  font-size: 0.625rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #212332;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-1"
        >
          Headline 01 - H1
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h2
          className="emotion-2"
        >
          Headline 02 - H2
        </h2>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h3
          className="emotion-3"
        >
          Headline 03 - H3
        </h3>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h4
          className="emotion-4"
        >
          Headline 04 - H4
        </h4>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h5
          className="emotion-5"
        >
          Headline 05 - H5
        </h5>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-6"
        >
          Title 01 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-7"
        >
          Title 02 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-8"
        >
          Title 03 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-9"
        >
          Label 01 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-10"
        >
          Label 02 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-11"
        >
          Label 03 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-12"
        >
          Body 01 - P
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-13"
        >
          Body 02 - P
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-14"
        >
          Body 03 - P
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Extra style 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  font-weight: 700;
  color: #212332;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  font-style: italic;
  color: #212332;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #212332;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-1"
        >
          Bold
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-2"
        >
          Italic
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Underline
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Types (inverted) 1`] = `
.emotion-0 {
  background: #212332;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #ffffff;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #b9cdfc;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #ff73a6;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #60efcb;
}

.emotion-5 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #ffbb57;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #1de9b6;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-1"
        >
          Primary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-2"
        >
          Secondary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Error
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-4"
        >
          Success
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-5"
        >
          Warning
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-6"
        >
          Active
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Types (light) 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #54587f;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #b2104a;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #0e745b;
}

.emotion-5 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #FF9F0F;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-1"
        >
          Primary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-2"
        >
          Secondary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Error
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-4"
        >
          Success
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-5"
        >
          Warning
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-6"
        >
          Active
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Variants 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  font-family: Roboto;
  line-height: 2.5rem;
  font-size: 2rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 2.25rem;
  font-size: 1.75rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 2rem;
  font-size: 1.375rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 1.75rem;
  font-size: 1.25rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-5 {
  font-family: Roboto;
  line-height: 1.5rem;
  font-size: 1.125rem;
  font-weight: 700;
  letter-spacing: 0rem;
  margin-block-start: 1rem;
  margin-block-end: 1rem;
  color: #212332;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 700;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-7 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-8 {
  font-family: Roboto;
  line-height: 1.125rem;
  font-size: 0.625rem;
  font-weight: 700;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-9 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-10 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-11 {
  font-family: Roboto;
  line-height: 1.125rem;
  font-size: 0.625rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-12 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-13 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-14 {
  font-family: Roboto;
  line-height: 1.125rem;
  font-size: 0.625rem;
  font-weight: 400;
  letter-spacing: 0.015625rem;
  color: #212332;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-1"
        >
          Headline 01
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h2
          className="emotion-2"
        >
          Headline 02
        </h2>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h3
          className="emotion-3"
        >
          Headline 03
        </h3>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h4
          className="emotion-4"
        >
          Headline 04
        </h4>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h5
          className="emotion-5"
        >
          Headline 05
        </h5>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-6"
        >
          Title 01
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-7"
        >
          Title 02
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-8"
        >
          Title 03
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-9"
        >
          Label 01
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-10"
        >
          Label 02
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-11"
        >
          Label 03
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-12"
        >
          Body 01
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-13"
        >
          Body 02
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-14"
        >
          Body 03
        </p>
      </div>
    </div>
  </div>
</div>
`;
